examples/test/testpolicy9595.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9595
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key28: value29
      key29: value35
      key35: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value30
          key14: value2
      podSelector:
        matchLabels:
          key9: value39
          key36: value46
